--- a/src/app/globalStyles.scss
+++ b/src/app/globalStyles.scss
@@ -23,12 +23,36 @@ button {
 
 .app__layout {
   display: grid;
-  grid-template-columns: 19.5% 80.5%;
+  grid-template-columns: 100px 91.5%;
   &_wrapper {
     display: flex;
     flex-direction: column;
   }
   &_content {
-    padding: 40px 50px 40px 30px;
+    padding: 20px 20px 0px 20px;
+  }
+}
+
+@media screen and (max-width: 1277px) {
+  .app__layout {
+    grid-template-columns: 100px 90.5%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .app__layout {
+    grid-template-columns: 100px 89.5%;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .app__layout {
+    grid-template-columns: 100px 88.5%;
+  }
+}
+
+@media screen and (max-width: 463px) {
+  .app__layout {
+    grid-template-columns: 30px 88.5%;
   }
 }
