--- a/src/entities/AuthEntities/SignInEntities/SignInEntities.scss
+++ b/src/entities/AuthEntities/SignInEntities/SignInEntities.scss
@@ -1,6 +1,6 @@
 @import "../../../shared/variables.scss";
 
-.head {
+.signInEntities {
   background-color: $orange;
   display: flex;
   align-items: center;
