--- a/src/entities/AuthEntities/SignUpEntities/SignUpEntities.scss
+++ b/src/entities/AuthEntities/SignUpEntities/SignUpEntities.scss
@@ -1,6 +1,6 @@
 @import "../../../shared/variables.scss";
 
-.head {
+.signUpEntities {
   background-color: $orange;
   display: flex;
   align-items: center;
