--- a/src/features/AuthFeatures/SignInFeatures/ui/SignInFeatures.scss
+++ b/src/features/AuthFeatures/SignInFeatures/ui/SignInFeatures.scss
@@ -26,26 +26,15 @@
         font-size: 18px;
       }
 
-      &--iconG {
+      &--icon {
         position: absolute;
         right: 22px;
         margin-top: 14px;
         cursor: pointer;
       }
 
-      &--iconP {
-        position: absolute;
-        right: 18px;
-        margin-top: 10px;
-        cursor: pointer;
-      }
-
       @media screen and (max-width: 618px) {
-        &--iconP {
-          margin-top: 5px;
-        }
-
-        &--iconG {
+        &--icon {
           margin-top: 9px;
         }
       }
@@ -83,7 +72,7 @@
       color: $white;
       font-size: 20px;
       cursor: pointer;
-      margin-bottom: 60px;
+      margin-bottom: 25px;
     }
 
     &--fullBtn:hover {
@@ -102,7 +91,20 @@
       color: $white;
       font-size: 20px;
       cursor: not-allowed;
-      margin-bottom: 60px;
+      margin-bottom: 25px;
+    }
+
+    &--span {
+      font-size: 14px;
+      margin-bottom: 50px;
+      text-align: center;
+
+      &--link {
+        color: $orange;
+        text-decoration: none;
+        font-weight: 500;
+        margin-left: 6px;
+      }
     }
   }
 }
