--- a/src/entities/AddRecipeBtnEntities/AddRecipeBtnEntities.scss
+++ b/src/entities/AddRecipeBtnEntities/AddRecipeBtnEntities.scss
@@ -26,7 +26,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: #fff;
   border-radius: 28px;
   max-width: 80%;
   max-height: 80%;
