--- a/src/features/AddRecipeFeature/ui/AddRecipeFetures.scss
+++ b/src/features/AddRecipeFeature/ui/AddRecipeFetures.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   padding: 20px;
   width: 544px;
-  height: 744px;
   flex-shrink: 0;
   background: #fff;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.08),
@@ -55,6 +54,8 @@
     display: flex;
     flex-direction: column;
 
+    // ------file input start--------
+
     .imgLabel {
       display: flex;
       width: 100%;
@@ -88,6 +89,8 @@
       }
     }
 
+    // ------file input end--------
+
     .p {
       color: $TFaded;
       font-size: 14px;
@@ -105,6 +108,37 @@
 
     .ingLabel {
       display: flex;
+      margin-top: 24px;
+
+      .ingInput {
+        margin-top: 4px;
+        display: flex;
+        width: 100%;
+        height: 56px;
+        padding: 9px 24px;
+        align-items: center;
+        gap: 10px;
+        color: $text;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 17px;
+        border-radius: 20px;
+        border: none;
+        background: var(--Input-Field-Background, $trans);
+      }
+
+      .ingInputWeight {
+        border-radius: 16px;
+        margin-top: 4px;
+        margin-left: 6px;
+        background: var(--Input-Field-Background, $trans);
+        width: 80px;
+        height: 56px;
+        border: none;
+        padding: 9px 19px;
+        font-size: 16px;
+        font-weight: 400;
+      }
     }
 
     > label {
@@ -137,22 +171,7 @@
         border: 0;
       }
 
-      .nameInput {
-        margin-top: 4px;
-        display: flex;
-        width: 100%;
-        height: 56px;
-        padding: 9px 24px;
-        align-items: center;
-        gap: 10px;
-        border-radius: 42px;
-        border: 1px solid var(--Primary, $orange);
-        color: $text;
-        font-size: 16px;
-        font-weight: 400;
-      }
-
-      .descInput {
+      .greyInput {
         margin-top: 4px;
         display: flex;
         width: 100%;
@@ -167,50 +186,6 @@
         border-radius: 20px;
         border: none;
         background: var(--Input-Field-Background, $trans);
-      }
-
-      .ingInput {
-        margin-top: 4px;
-        display: flex;
-        width: 100%;
-        height: 56px;
-        padding: 9px 24px;
-        align-items: center;
-        gap: 10px;
-        color: $text;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 17px;
-        border-radius: 20px;
-        border: none;
-        background: var(--Input-Field-Background, $trans);
-      }
-
-      .ingInputWeight {
-        border-radius: 16px;
-        margin-top: 4px;
-        margin-left: 6px;
-        background: var(--Input-Field-Background, $trans);
-        width: 80px;
-        height: 56px;
-        border: none;
-        padding: 9px 19px;
-        font-size: 16px;
-        font-weight: 400;
-      }
-
-      .plusBtn {
-        margin-top: 8px;
-        background-color: transparent;
-        margin-left: 12px;
-      }
-
-      .difficulty {
-        display: inline-block;
-      }
-
-      .difficulty option {
-        display: inline-block;
       }
 
       @media screen and (max-width: 580px) {
@@ -218,13 +193,50 @@
           margin-left: -20px;
         }
 
-        .nameInput {
+        .greyInput {
           height: 40px;
         }
+      }
+    }
 
-        .descInput {
-          height: 40px;
-        }
+    .plusBtn {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+
+      > button {
+        background-color: transparent;
+      }
+    }
+
+    .difficulty {
+      display: flex;
+      gap: 8px;
+      margin-top: 4px;
+
+      > button {
+        display: flex;
+        height: 56px;
+        padding: 8px 24px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 100px;
+        background: var(--Input-Field-Background, $trans);
+        color: var(--Background, $text);
+        font-size: 16px;
+        font-weight: 400;
+      }
+
+      > button:hover {
+        background: var(--Input-Field-Background, $orange);
+        color: var(--Background, $white);
+        transition: 250ms;
+      }
+
+      .selected {
+        background-color: orange;
+        color: var(--Background, $white);
       }
     }
 
@@ -237,6 +249,7 @@
 
   > button {
     margin-top: 30px;
+    margin-bottom: 10px;
     display: flex;
     width: 100%;
     height: 56px;
