added apadtiv and fixed all the bugs

--- a/src/entities/AddRecipeBtnEntities/AddRecipeBtnEntities.scss
+++ b/src/entities/AddRecipeBtnEntities/AddRecipeBtnEntities.scss
@@ -1,8 +1,8 @@
 .addRecipeBtnEntities {
   display: flex;
-  width: 480px;
+  width: 100%;
   height: 56px;
-  padding: 8px 127px;
+  padding: 8px 20px;
   justify-content: center;
   align-items: center;
   gap: 10px;
