--- a/src/widgets/DetailsWidget/ui/DeatilsWidget.scss
+++ b/src/widgets/DetailsWidget/ui/DeatilsWidget.scss
@@ -4,11 +4,18 @@
   &__imgBlock {
     margin-top: -50px;
     margin-left: -24px;
-    margin-right: -29px;
+    margin-right: -35px;
 
     > img {
-      width: 104.7%;
-      height: 340px;
+      width: 100%;
+      height: 540px;
+    }
+
+    @media screen and (max-width: 465px) {
+      > img {
+        width: 100%;
+        height: 340px;
+      }
     }
   }
 
